# py-simple-healthcheck

./: .gitignore  README.md  pyproject.toml
py_simple_healthcheck/: __init__.py  healthcheck.py
tests/: test_py_simple_healthcheck.py
